--- a/clone-shopify-api-reference/app/globals.css
+++ b/clone-shopify-api-reference/app/globals.css
@@ -75,3 +75,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+[data-line] span:not(.select-none) {
+  word-break: break-all;
+  display: inline !important;
+}
